@@ -26,6 +26,18 @@ class MainTest {
         int exitCode = Main.execute(new String[]{"--version"}, 25, new PrintWriter(new StringWriter()), new PrintWriter(error));
 
         assertEquals(1, exitCode);
-        assertTrue(error.toString().contains("Java 26 or newer is required"));
+        assertTrue(error.toString().contains("Java 26 with --enable-preview is required"));
+    }
+
+    @Test
+    void rejectsNewerJavaBeforeCommandExecution() {
+        var output = new StringWriter();
+        var error = new StringWriter();
+
+        int exitCode = Main.execute(new String[]{"--version"}, 27, new PrintWriter(output), new PrintWriter(error));
+
+        assertEquals(1, exitCode);
+        assertEquals("", output.toString());
+        assertTrue(error.toString().contains("Java 26 with --enable-preview is required; detected Java 27"));
     }
 }
