@@ -144,6 +144,7 @@ class NodeOracleMaterializerTest {
         String java = configuredJava == null || configuredJava.isBlank() ? ProcessHandle.current().info().command().orElseThrow() : configuredJava;
         var command = new java.util.ArrayList<String>(arguments.length + 4);
         command.add(java);
+        command.add("--enable-preview");
         command.add("-cp");
         command.add(System.getProperty("java.class.path"));
         command.add(McpProcessFixtureMain.class.getName());
